--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,16 @@
 
 <!-- <app-component1></app-component1> -->
 
+@if(manage==0){
+  <app-mokuhyo1></app-mokuhyo1>
+}@else{
+  <app-siyousya-ui></app-siyousya-ui>
+}
 
-<app-mokuhyo1></app-mokuhyo1>
+<!-- <app-mokuhyo1></app-mokuhyo1> -->
+
+<!-- <app-siyousya-ui></app-siyousya-ui> -->
+
 
 <!--app-mokuhyo2></app-mokuhyo2-->
 
