--- a/src/app/components/mokuhyo3/mokuhyo3.component.html
+++ b/src/app/components/mokuhyo3/mokuhyo3.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="createAQuestionnaire">
   <h3>問卷名稱</h3>
   <mat-form-field class="example-full-width" >
     <mat-label>問卷名稱</mat-label>
@@ -27,8 +27,7 @@
     <mat-datepicker #picker2></mat-datepicker>
   </mat-form-field>
 </div>
-<div>
+<div class="buttonSan">
   <button mat-flat-button >取消</button>
-  <button mat-flat-button>上一步</button>
   <button mat-flat-button (click)="goMokuhyo4()">下一步</button>
 </div>
