--- a/src/app/components/mokuhyo4/mokuhyo4.component.scss
+++ b/src/app/components/mokuhyo4/mokuhyo4.component.scss
@@ -49,3 +49,10 @@ th {
   pointer-events: none;
 
 }
+
+.urlcss{
+  color: #004dff;
+  text-decoration: underline;
+  // cursor為變更鼠標為手指的css
+  cursor: pointer;
+}
