--- a/src/app/components/mokuhyo5/mokuhyo5.component.html
+++ b/src/app/components/mokuhyo5/mokuhyo5.component.html
@@ -1,6 +1,6 @@
-<h1>{{quData.title}}</h1>
+<h1>{{initialData.title}}</h1>
 <div class="siyousya">
-  <p>{{quData.ex}}</p>
+  <p>{{initialData.ex}}</p>
   <br>
   <div id="auth-form" class="form active">
     <label>名字:</label>
