--- a/src/app/siyousya/siyousya1/siyousya1.component.html
+++ b/src/app/siyousya/siyousya1/siyousya1.component.html
@@ -25,7 +25,7 @@
       <mat-datepicker #picker2></mat-datepicker>
     </mat-form-field>
     <br>
-    <button (click)="searchChecklist()" mat-flat-button>搜尋</button>
+    <button type ButtonVariant = 'raised' (click)="searchChecklist()" mat-flat-button>搜尋</button>
     <br>
   </div>
 
