--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
 
 <!-- <app-component1></app-component1> -->
 
-@if(manage==0){
-  <app-mokuhyo1></app-mokuhyo1>
-}@else{
+@if(manage==true){
   <app-siyousya-ui></app-siyousya-ui>
+}@else{
+  <app-mokuhyo1></app-mokuhyo1>
 }
 
 <!-- <app-mokuhyo1></app-mokuhyo1> -->
