--- a/src/app/components/mokuhyo1/mokuhyo1.component.html
+++ b/src/app/components/mokuhyo1/mokuhyo1.component.html
@@ -11,28 +11,13 @@
       </button>
     </li>
     <li>
-      <a class="group" routerLink="/moguhyo1/touroku"> <!--管理者登入-->
-        <i class="" aria-hidden=""></i>
-        <mat-icon>manage_accounts</mat-icon>
-      </a>
+      <button class="group"  mat-icon-button (click)="logout()" for="checkbox" style="position: absolute;">
+        <mat-icon class="home_m">logout</mat-icon>
+      </button>
     </li>
   </ul>
 </div>
-<!-- <div class="menudiv">
-  <nav>
-    <label class="menu" for="checkbox" style="padding: 10px;">
-      <mat-icon fontIcon="density_small"></mat-icon>
-    </label>
 
-    <a class="newkami1" routerLink="/moguhyo1/mokuhyo3">
-      <mat-icon fontIcon='edit_document'></mat-icon>
-    </a>
-
-    <a class="newkami2" routerLink="/moguhyo1/mokuhyo2">
-      <mat-icon fontIcon="import_contacts"></mat-icon>
-    </a>
-  </nav>
-</div> -->
 
 <mat-drawer-container class="menudiv" autosize>
   <mat-drawer #drawer class="example-sidenav"  mode="over">
