--- a/src/app/components/mokuhyo1/mokuhyo1.component.scss
+++ b/src/app/components/mokuhyo1/mokuhyo1.component.scss
@@ -6,13 +6,14 @@
 .menu{
   position: fixed;
   left: 0px;
+  top: 10%;
 
 }
 
 .home{
   padding: 8px;
   position:absolute;
-  top: 0px;
+  top: 10%;
 }
 
 .group{
@@ -20,6 +21,7 @@
   right: 10px;
   top: 10px;
 }
+
 
 .menu_up{
   /*定錨*/
@@ -64,7 +66,7 @@
 
 .manaka{
   z-index: 0;
-  border-style: solid;
+  // border-style: solid;
   position: absolute;
   top: 2%;
   left: 3.8%;
