--- a/src/app/siyousya/siyousya-ui/siyousya-ui.component.html
+++ b/src/app/siyousya/siyousya-ui/siyousya-ui.component.html
@@ -1,12 +1,12 @@
 <div class="menu_up" style="position: fixed;">
   <ul>
     <li>
-      <button mat-icon-button (click)="home()" class="home" for="checkbox" style="position: absolute;">
+      <button mat-icon-button (click)="home()" class="home" for="checkbox" >
         <mat-icon class="home_m">home</mat-icon>
       </button>
     </li>
-    <li>
-      <button mat-icon-button (click)="touroku()" class="group" for="checkbox" style="position: absolute;">
+    <li class="example-spacer">
+      <button mat-icon-button (click)="touroku()" class="group" for="checkbox" >
         <mat-icon>manage_accounts</mat-icon>
       </button>
     </li>
