--- a/src/app/siyousya/siyousya1/siyousya1.component.scss
+++ b/src/app/siyousya/siyousya1/siyousya1.component.scss
@@ -24,7 +24,7 @@
 
 .checklistMenu{
   width:100%;
-
+  height: 90%;
   border-right: 3px;
   border-style: solid;
 
@@ -35,7 +35,7 @@
 }
 //
 .container {
-  background: white;
+  background: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
