--- a/src/app/siyousya/siyousya4/siyousya4.component.scss
+++ b/src/app/siyousya/siyousya4/siyousya4.component.scss
@@ -5,6 +5,8 @@
 
     h3 {
         width: 100%;
+        font-size:50px;
+        margin-bottom: 20px;
     }
 
     .canvasCss {
@@ -15,11 +17,15 @@
     .divText{
       margin: 3%;
     }
+    h5{
+      margin-bottom: 40px;
+      font-size: 30px;
+    }
 
 }
 .typeTCss {
   border: 2px solid #fff;
   padding: 8px;
   background-color: #a0571b;
-
 }
+
