--- a/src/app/siyousya/siyousya4/siyousya4.component.html
+++ b/src/app/siyousya/siyousya4/siyousya4.component.html
@@ -29,5 +29,5 @@
   }
 </div>
 <div>
-  <button mat-flat-button (click)="goBack()">上一頁</button>
+  <button mat-flat-button (click)="goBack()">返回首頁</button>
 </div>
