--- a/src/app/components/mokuhyo1/mokuhyo1.component.html
+++ b/src/app/components/mokuhyo1/mokuhyo1.component.html
@@ -1,22 +1,18 @@
-<div class="menu_up" style="position: fixed;">
-  <ul>
-    <li>
-      <button mat-icon-button (click)="drawer.toggle()" class="menu" for="checkbox" style="position: absolute;">
-        <mat-icon>menu</mat-icon>
-      </button>
-    </li>
-    <li>
-      <button mat-icon-button (click)="home()" class="home" for="checkbox" style="position: absolute;">
-        <mat-icon class="home_m">home</mat-icon>
-      </button>
-    </li>
-    <li>
-      <button class="group"  mat-icon-button (click)="logout()" for="checkbox" style="position: absolute;">
-        <mat-icon class="home_m">logout</mat-icon>
-      </button>
-    </li>
-  </ul>
-</div>
+
+<mat-toolbar class="menu_up">
+  <button mat-icon-button (click)="drawer.toggle()" class="menu" for="checkbox" style="position: absolute;">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <button mat-icon-button (click)="home()" class="home" for="checkbox" >
+    <mat-icon class="home_m">home</mat-icon>
+  </button>
+
+  <span class="example-spacer"></span>
+
+  <button class="group"  mat-icon-button (click)="logout()" for="checkbox" >
+    <mat-icon class="home_m">logout</mat-icon>
+  </button>
+</mat-toolbar>
 
 
 <mat-drawer-container class="menudiv" autosize>
