--- a/src/app/components/mokuhyo2/mokuhyo2.component.scss
+++ b/src/app/components/mokuhyo2/mokuhyo2.component.scss
@@ -1,5 +1,4 @@
 .farder{
-
   display:flex;
   width: 100%;
   height: 100%;
@@ -61,4 +60,9 @@ th {
   text-decoration: none;
   pointer-events: none;
   cursor: default;
+}
+
+::ng-deep.mat-mdc-header-row{
+  background-color: #11aa2a !important;
+  background:red($color: #000000);
 }
