--- a/src/app/components/mokuhyo4/mokuhyo4.component.scss
+++ b/src/app/components/mokuhyo4/mokuhyo4.component.scss
@@ -1,8 +1,9 @@
-div{
+div {
   border-style: solid;
-
 }
-th, td {
+
+th,
+td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
@@ -12,45 +13,67 @@ th {
   background-color: #f2f2f2;
 }
 
-.top{
+.leftop {
   width: 50%;
-
+  height: 50%;
+  padding: 20px;
 }
 
-.bottom{
+.bottom {
   width: 50%;
-  height: 55%;
+  height: 50%;
   float: left;
+  padding: 10px;
 }
 
-.right{
-  position: fixed;
-  top:10%;
-
-  right: 4.7%;
-  float: right;
-
-  width: 44%;
-  height: 80%;
-
-}
-.cikayan{
-  position:relative;
-  top: 50%;
-
-  float: right;
-  text-align: right;
-
+.right {
+  border-style: solid;
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  right: -50%;
   width: 50%;
-  height: 6%;
+  height: 50%;
+  padding: 20px;
 }
 
-.topcoolse{
+.rightDiv {
+  // display: flex;
+  // flex-flow: column wrap;
+  border-style: solid;
+
+  // max-width: fit-content;
+  width: 100%;
+  // display: flex;
+  height: 90%;
+
+
+  // button {
+  //   height: 30px;
+  //   width: 30px;
+  // }
+
+  // input {
+  //   height: 30px;
+  //   width: 150px;
+  // }
+}
+
+.cikayan {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  // text-align: right;
+  // width: 50%;
+  // height: 6%;
+}
+
+
+.topcoolse {
   pointer-events: none;
-
 }
 
-.urlcss{
+.urlcss {
   color: #004dff;
   text-decoration: underline;
   // cursor為變更鼠標為手指的css
