--- a/src/app/siyousya/siyousya-ui/siyousya-ui.component.html
+++ b/src/app/siyousya/siyousya-ui/siyousya-ui.component.html
@@ -1,4 +1,4 @@
-<div class="menu_up" style="position: fixed;">
+<!-- <div class="menu_up"  style="position: fixed;">
   <ul>
     <li>
       <button mat-icon-button (click)="home()" class="home" for="checkbox" >
@@ -11,7 +11,19 @@
       </button>
     </li>
   </ul>
-</div>
+</div> -->
+
+<mat-toolbar class="menu_up">
+  <button mat-icon-button (click)="home()" class="home" for="checkbox" >
+        <mat-icon class="home_m">home</mat-icon>
+  </button>
+
+  <span class="example-spacer"></span>
+
+  <button mat-icon-button (click)="touroku()" class="group" for="checkbox" >
+        <mat-icon>manage_accounts</mat-icon>
+  </button>
+</mat-toolbar>
 
 <div  class="menudiv">
   <div class="manaka">
