--- a/src/app/components/mokuhyo5/mokuhyo5.component.html
+++ b/src/app/components/mokuhyo5/mokuhyo5.component.html
@@ -62,6 +62,5 @@
 <div class="botam">
   <button mat-flat-button >取消</button>
   <button mat-flat-button (click)="goMokuhyo4()">上一步</button>
-  <button mat-flat-button (click)="storeService()">儲存</button>
-  <button mat-flat-button (click)="goMokuhyo7()">儲存並發布</button>
+  <button mat-flat-button (click)="storeService()">儲存並發布</button>
 </div>
