--- a/src/app/components/mokuhyo4/mokuhyo4.component.html
+++ b/src/app/components/mokuhyo4/mokuhyo4.component.html
@@ -13,7 +13,7 @@
       <mat-option value="text">文字描述(text)</mat-option>
     </mat-select>
   </mat-form-field>
-  <section class="example-section">
+  <section class="example-section" [ngClass]="{'topcoolse': input_cloose}">
     <mat-checkbox class="example-margin" [(ngModel)]="required">必選</mat-checkbox>
   </section>
   <br>
