--- a/src/app/components/mokuhyo7/mokuhyo7.component.html
+++ b/src/app/components/mokuhyo7/mokuhyo7.component.html
@@ -6,9 +6,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>名稱</th>
-    <td mat-cell *matCellDef="let element">@if(element.state=='進行中')
-                                              {<a href="{{element.html}}">{{element.name}}</a>}
-                                          @else { {{element.name}} }</td>
+    <td mat-cell *matCellDef="let element">{{element.name}}</td>
   </ng-container>
 
   <ng-container matColumnDef='start_time'>
