--- a/src/app/components/mokuhyo6/mokuhyo6.component.html
+++ b/src/app/components/mokuhyo6/mokuhyo6.component.html
@@ -6,18 +6,20 @@
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>使用者名稱</th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef>名稱</th>
+      <td mat-cell *matCellDef="let element">{{element.name}}</td>
     </ng-container>
 
-    <ng-container matColumnDef='Fill_in_time'>
-      <th mat-header-cell *matHeaderCellDef>填寫時間</th>
-      <td mat-cell *matCellDef="let element"> {{element.Fill_in_time}} </td>
+    <ng-container matColumnDef='start_time'>
+      <th mat-header-cell *matHeaderCellDef>開始時間</th>
+      <td mat-cell *matCellDef="let element"> {{element.start_time}} </td>
     </ng-container>
 
-    <ng-container matColumnDef='Answer_content'>
-      <th mat-header-cell *matHeaderCellDef>作答內容</th>
-      <td mat-cell *matCellDef="let element"> {{element.Answer_content}} </td>
+
+    <ng-container matColumnDef='GoTo'>
+      <th mat-header-cell *matHeaderCellDef>前往</th>
+      <td mat-cell *matCellDef="let element"><a
+          (click)="userBrowseResults(element.id)">前往</a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -31,7 +33,5 @@
   </mat-paginator>
 </div>
 <div>
-  <button>取消</button>
   <button>上一步</button>
-  <button>下一步</button>
 </div>
