--- a/src/app/components/mokuhyo1/mokuhyo1.component.scss
+++ b/src/app/components/mokuhyo1/mokuhyo1.component.scss
@@ -112,7 +112,7 @@
 
   .manaka{
     z-index: 0;
-    border-style: solid;
+    // border-style: solid;
     position: absolute;
     top: 2%;
     left: 3.8%;
