--- a/src/app/siyousya/siyousya1/siyousya1.component.scss
+++ b/src/app/siyousya/siyousya1/siyousya1.component.scss
@@ -70,7 +70,7 @@ th {
 .container[_ngcontent-ng-c1070359278]{
   background:rgb(245, 116, 31) !important;
 }
-.container tr:hover
+.container .in:hover
 {
   background:rgb(255, 230, 10) !important;
 }
