--- a/src/app/siyousya/siyousya3/siyousya3.component.html
+++ b/src/app/siyousya/siyousya3/siyousya3.component.html
@@ -4,7 +4,7 @@
 @else{<h1>{{quData.quizName}}</h1>}
 <p>{{quData.quizDes}}</p>
 <div>
-  <label>名稱</label><span>{{quData.userName}}</span>
+  <label>名稱</label><span style="color: red;">*</span><span>{{quData.userName}}</span>
 </div>
 
 <div>
@@ -12,7 +12,7 @@
 </div>
 
 <div>
-  <label>信箱</label><span>{{quData.userEmail}}</span>
+  <label>信箱</label><span style="color: red;">*</span><span>{{quData.userEmail}}</span>
 </div>
 
 <div>
