--- a/src/app/components/mokuhyo2/mokuhyo2.component.html
+++ b/src/app/components/mokuhyo2/mokuhyo2.component.html
@@ -26,6 +26,7 @@
     </mat-form-field>
     <br>
     <button (click)="searchChecklist()" mat-flat-button>搜尋</button>
+    <button (click)="searchChecklist()" mat-flat-button>清除  </button>
     <br>
   </div>
 
@@ -60,24 +61,24 @@
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>名稱</th>
-        <td mat-cell *matCellDef="let element">@if(element.state=='進行中')
-                                                  {<a (click)="userQuestionnaireList(element.id,element.name)">{{element.name}}</a>}
+        <td mat-cell *matCellDef="let element">@if(element.status=='進行中')
+                                                  {<button (click)="userQuestionnaireList(element.id)">{{element.name}}</button>}
                                               @else { {{element.name}} }</td>
       </ng-container>
 
-      <ng-container matColumnDef='state'>
+      <ng-container matColumnDef='status'>
         <th mat-header-cell *matHeaderCellDef>狀態</th>
-        <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
       </ng-container>
 
-      <ng-container matColumnDef='start_time'>
+      <ng-container matColumnDef='start_date'>
         <th mat-header-cell *matHeaderCellDef>開始時間</th>
-        <td mat-cell *matCellDef="let element"> {{element.start_time}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.start_date}} </td>
       </ng-container>
 
-      <ng-container matColumnDef='end_time'>
+      <ng-container matColumnDef='end_date'>
         <th mat-header-cell *matHeaderCellDef>結束時間</th>
-        <td mat-cell *matCellDef="let element"> {{element.end_time}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.end_date}} </td>
       </ng-container>
 
       <ng-container matColumnDef='GoTo'>
