--- a/src/app/components/mokuhyo6/mokuhyo6.component.html
+++ b/src/app/components/mokuhyo6/mokuhyo6.component.html
@@ -1,3 +1,7 @@
+<nav>
+  <button (click)="gotoStattistics()">統計圖表</button>
+</nav>
+
 <div>
   <table mat-table [dataSource]="dataSource" class="container">
     <ng-container matColumnDef="id">
@@ -5,21 +9,21 @@
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="userName">
       <th mat-header-cell *matHeaderCellDef>名稱</th>
-      <td mat-cell *matCellDef="let element">{{element.name}}</td>
+      <td mat-cell *matCellDef="let element">{{element.userName}}</td>
     </ng-container>
 
-    <ng-container matColumnDef='start_time'>
-      <th mat-header-cell *matHeaderCellDef>開始時間</th>
-      <td mat-cell *matCellDef="let element"> {{element.start_time}} </td>
+    <ng-container matColumnDef='fillinDate'>
+      <th mat-header-cell *matHeaderCellDef>填寫時間</th>
+      <td mat-cell *matCellDef="let element"> {{element.fillinDate}} </td>
     </ng-container>
 
 
-    <ng-container matColumnDef='GoTo'>
+    <ng-container matColumnDef='email'>
       <th mat-header-cell *matHeaderCellDef>前往</th>
       <td mat-cell *matCellDef="let element"><a
-          (click)="userBrowseResults(element.id)">前往</a></td>
+          (click)="userBrowseResults(element.userName,element.email,element.phone,element.age)">前往</a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -33,5 +37,5 @@
   </mat-paginator>
 </div>
 <div>
-  <button>上一步</button>
+  <button (click)="goback()">上一步</button>
 </div>
