--- a/src/app/siyousya/siyousya-ui/siyousya-ui.component.scss
+++ b/src/app/siyousya/siyousya-ui/siyousya-ui.component.scss
@@ -1,35 +1,13 @@
-.menu_up ul li {
-  // display: inline;
+.menu_up ul li{
+  display: inline;
   list-style-type: none;
-  // padding: 10px 10px;
+  padding: 10px 10px;
 }
 
-.menu {
-  position: fixed;
-  left: 0px;
 
-}
-
-.example-spacer {
-  flex: 1 1 auto;
-}
-
-.home {
-  padding: px;
-  position: absolute;
-  left: 0%;
-  top: 5%;
-}
-
-.group {
-  position: absolute;
-  right: 10px;
-  top: 5%;
-}
-
-.menu_up {
+.menu_up{
   /*定錨*/
-  z-index: 10;
+  z-index: 1;
   position: fixed;
   top: 0%;
   left: 0%;
@@ -37,15 +15,49 @@
   width: 100%;
   height: 6%;
   background-color: #000000;
-  overflow: hidden;
+  overflow:hidden;
+
+
+
+  .home{
+    padding: 0%;
+    position:absolute;
+    left: 0%;
+    top: 10%;
+  }
+
+  .group{
+    padding: 0%;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+
+  .group:hover::before{
+    z-index: 5;
+    position:fixed;
+    top: 6%;
+    right: 10px;
+    height: 4%;
+    width: 100px;
+
+    content:'管理者登入';
+    color: #fff;
+    font-size: .1 em;
+    background: #000000;
+    padding: 8px;
+    border-radius: 10px;
+  }
   .example-spacer {
     flex: 1 1 auto;
   }
 }
 
-.menudiv {
+
+
+.menudiv{
   /*定錨*/
-  z-index: 0;
+  z-index: 1;
   position: fixed;
   top: 6%;
   left: 0%;
@@ -53,15 +65,25 @@
   display: flex;
   flex-direction: column;
   unicode-bidi: isolate;
-  background-color: #f7d8b5;
+  background-color: #f1d4b3;
   border: 1px solid;
   width: 100%;
   height: 100%;
-}
 
-// .mat-mdc-header-row {
-//   background-color: #a5753e;
-// }
+
+
+
+  .manaka{
+    z-index: 0;
+    // border-style: solid;
+    position: absolute;
+    top: 2%;
+    left: 3.8%;
+
+    width: 94%;
+    height: 100%;
+  }
+}
 
 .example-sidenav-content {
   display: flex;
@@ -73,31 +95,21 @@
 .example-sidenav {
   padding: 10px;
   width: 80px;
-}
-
-.manaka {
-  z-index: 0;
-  // border-style: solid;
-  position: absolute;
-  top: 2%;
-  left: 3.8%;
-
-  width: 94%;
-  height: 100%;
+  background-color: #000000;
 }
 
 
 
-.mat-icon {
+
+
+.mat-icon{
   font-size: 40px;
   width: 50px;
   height: 50px;
   color: rgb(255, 255, 255);
-
 }
 
-nav a,
-nav label {
+nav a,nav label{
   display: block;
   padding: 10px;
 
@@ -108,80 +120,6 @@ nav label {
 
 
 
-.example-spacer:hover::before {
-  z-index: 10;
-  position: fixed;
-  top: 7%;
-  right: 10px;
-  height: 5%;
-  width: 10%;
-
-  content: '管理者登入';
-  color: #fff;
-  font-size: 20px;
-  background: #000000;
-  padding: 8px;
-  border-radius: 10px;
-}
 
 
 
-// body {
-//   margin: 0;
-//   min-height: 100vh;
-//   background-color: #e493d0;
-//   background-image:
-//     radial-gradient(closest-side, rgba(255, 217, 30, 1), rgba(255, 217, 30, 0)),
-//     radial-gradient(closest-side, rgb(255, 125, 38, 1), rgba(255, 125, 38, 0)),
-//     radial-gradient(closest-side, rgba(162, 0, 226, 1), rgba(162, 0, 226, 0)),
-//     radial-gradient(closest-side, rgb(61, 249, 255, 1), rgba(61, 249, 255, 0)),
-//     radial-gradient(closest-side, rgb(255, 48, 48, 1), rgba(255, 48, 48, 0)) !important;
-//   background-size:
-//     130vmax 130vmax,
-//     80vmax 80vmax,
-//     90vmax 90vmax,
-//     110vmax 110vmax,
-//     90vmax 90vmax;
-//   background-position:
-//     -80vmax -80vmax,
-//     60vmax -30vmax,
-//     10vmax 10vmax,
-//     -30vmax -10vmax,
-//     50vmax 50vmax;
-//   background-repeat: no-repeat;
-//   animation: 10s movement linear infinite;
-// }
-
-// @keyframes movement {
-
-//   0%,
-//   100% {
-//     background-size:
-//       130vmax 130vmax,
-//       80vmax 80vmax,
-//       90vmax 90vmax,
-//       110vmax 110vmax,
-//       90vmax 90vmax;
-//     background-position:
-//       -80vmax -80vmax,
-//       60vmax -30vmax,
-//       10vmax 10vmax,
-//       -30vmax -10vmax,
-//       50vmax 50vmax;
-//   }
-
-//   25% {
-//     background-size:
-//       100vmax 100vmax,
-//       90vamx 90vamx,
-//       100vamx 100vamx,
-//       90vamx 90vamx,
-//       60vamx 60vamx;
-//     background-position:
-//       -60vmax -90vmax,
-//       50vmax -40vmax,
-//       0vmax -20vmax,
-//       -40vmax -20vmax,
-//       40vmax 60vmax;
-//   }
-// }
