--- a/src/app/siyousya/siyousya2/siyousya2.component.html
+++ b/src/app/siyousya/siyousya2/siyousya2.component.html
@@ -1,69 +1,67 @@
-<h1>{{quizData.quizName}}</h1>
 <div class="siyousya">
+  <h1>{{quizData.quizName}}</h1>
   <p>{{quizData.quizDes}}</p>
-  <br>
   <form [formGroup]="form" class="container">
     <div id="auth-form" class="form active">
       <label>名字:</label>
-      <input formControlName="name" placeholder="名字" [(ngModel)]="userName">
+      <input class="inputfrom" formControlName="name" placeholder="名字" [(ngModel)]="userName">
       <br>
       <label>手機:</label>
-      <input formControlName="mobilePhoneNumber" placeholder="手機" [(ngModel)]="userPhone">
+      <input class="inputfrom" formControlName="mobilePhoneNumber" placeholder="手機" [(ngModel)]="userPhone">
       <br>
       <label>信箱:</label>
-      <input formControlName="email" placeholder="信箱" [(ngModel)]="userEmail">
+      <input class="inputfrom" formControlName="email" placeholder="信箱" [(ngModel)]="userEmail">
       <br>
       <label>年齡:</label>
-      <input formControlName="age" placeholder="年齡" [(ngModel)]="userAge">
+      <input class="inputfrom" formControlName="age" placeholder="年齡" [(ngModel)]="userAge">
       <br>
     </div>
   </form>
-</div>
-<br>
-<div class="forsitumon">
-  <ol>
-    @for (quest of newQuestArray; track $index) {
-        <li>
-            <h5>
-                {{ quest.quesName }}
-                @if (quest.required) {
-                    <span style="color: red;">*</span>
-                }
-            </h5>
-        </li>
+  <br>
+  <div class="forsitumon">
+    <ol>
+      @for (quest of newQuestArray; track $index) {
+      <li>
+        <h5>
+          {{ quest.quesName }}
+          @if (quest.required) {
+          <span style="color: red;">*</span>
+          }
+        </h5>
+      </li>
 
-        @if (quest.type == 'multi') {
-            @for (option of quest.options; track $index) {
-                <div>
-                    <input type="checkbox" [(ngModel)]="option.boxBoolean">
-                    {{ option.option }}
-                </div>
-                <br>
-            }
-            <br>
-        }
+      @if (quest.type == 'multi') {
+      @for (option of quest.options; track $index) {
+      <div>
+        <input class="MST" type="checkbox" [(ngModel)]="option.boxBoolean">
+        {{ option.option }}
+      </div>
+      }
+      }
 
-        @if (quest.type == 'single') {
-            @for (option of quest.options; track $index) {
-                <input type="radio" name="{{quest.questId}}" value="{{option.optionNumber}}"
-                       [(ngModel)]="quest.radioAnswer">
-                    {{ option.option }}
-                <br>
+      @if (quest.type == 'single') {
+      @for (option of quest.options; track $index) {
+      <div>
+        <input class="MST" type="radio" name="{{quest.questId}}" value="{{option.optionNumber}}"
+          [(ngModel)]="quest.radioAnswer">
+        {{ option.option }}
+      </div>
+      }
+      }
 
-            }
-            <br>
-        }
-
-        @if (quest.type == 'text') {
-            <textarea style="height: 150px; width: 60%;" [(ngModel)]="quest.answer"></textarea>
-            <br>
-        }
-    }
+      @if (quest.type == 'text') {
+      <div>
+        <textarea style="height: 150px; width: 60%;" [(ngModel)]="quest.answer"></textarea>
+      </div>
+      <br>
+      }
+      }
     </ol>
+  </div>
 </div>
+
 
 <div class="botam">
-  <button mat-flat-button >取消</button>
-  <button mat-flat-button>上一步</button>
+  <button mat-flat-button (click)="gohomo()">取消</button>
   <button mat-flat-button (click)="goSiyousya3()">瀏覽</button>
 </div>
