--- a/src/app/components/mokuhyo6/mokuhyo6.component.html
+++ b/src/app/components/mokuhyo6/mokuhyo6.component.html
@@ -21,7 +21,7 @@
 
 
     <ng-container matColumnDef='email'>
-      <th mat-header-cell *matHeaderCellDef>前往</th>
+      <th mat-header-cell *matHeaderCellDef>瀏覽問卷</th>
       <td mat-cell *matCellDef="let element"><a
           (click)="userBrowseResults(element.userName,element.email,element.phone,element.age)">前往</a></td>
     </ng-container>
