--- a/src/app/components/mokuhyo2/mokuhyo2.component.html
+++ b/src/app/components/mokuhyo2/mokuhyo2.component.html
@@ -26,7 +26,7 @@
     </mat-form-field>
     <br>
     <button (click)="searchChecklist()" mat-flat-button>搜尋</button>
-    <button (click)="searchChecklist()" mat-flat-button>清除  </button>
+    <button (click)="searchChecklist()" mat-flat-button>清除</button>
     <br>
   </div>
 
@@ -61,7 +61,7 @@
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>名稱</th>
-        <td mat-cell *matCellDef="let element">@if(element.status=='進行中')
+        <td mat-cell *matCellDef="let element">@if(element.status=='進行中'||element.status=='已結束')
                                                   {<button (click)="userQuestionnaireList(element.id)">{{element.name}}</button>}
                                               @else { {{element.name}} }</td>
       </ng-container>
@@ -82,9 +82,10 @@
       </ng-container>
 
       <ng-container matColumnDef='GoTo'>
-        <th mat-header-cell *matHeaderCellDef>前往</th>
-        <td mat-cell *matCellDef="let element"><a [ngClass]="{'renzeiyesno': element.GoTo == '' }"
-            href="{{element.GoTo}}">前往</a></td>
+        <th mat-header-cell *matHeaderCellDef>編輯</th>
+        <td mat-cell *matCellDef="let element">
+          @if(element.status=='尚未開始'||element.status=='未發布'){
+            <button (click)="editingOptions(element.id)">前往</button>}
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -94,13 +95,5 @@
 
     <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
-
-    <!-- <div class="pagination">
-      <button onclick="prevPage()">上一頁</button>
-      <span>頁碼: </span>
-      <input type="number" id="pageInput" min="1" value="1" onchange="goToPage()">
-      <span id="pageInfo"></span>
-      <button onclick="nextPage()">下一頁</button>
-  </div> -->
   </div>
 </div>
