--- a/src/app/components/mokuhyo4/mokuhyo4.component.html
+++ b/src/app/components/mokuhyo4/mokuhyo4.component.html
@@ -49,7 +49,7 @@
     <button mat-flat-button (click)="addNewList()">新增</button>
     }
     @if(editSure){
-    <button mat-flat-button>確定編輯</button>
+    <button mat-flat-button (click)="ConfirmEdit()">確定編輯</button>
     }
     }
   </div>
