--- a/src/app/components/mokuhyo5/mokuhyo5.component.html
+++ b/src/app/components/mokuhyo5/mokuhyo5.component.html
@@ -61,5 +61,6 @@
 <div class="botam">
   <button mat-flat-button >取消</button>
   <button mat-flat-button (click)="goMokuhyo4()">上一步</button>
+  <button mat-flat-button (click)="juststoreService()">僅儲存</button>
   <button mat-flat-button (click)="storeService()">儲存並發布</button>
 </div>
